--- a/src/views/Explore/filter.html
+++ b/src/views/Explore/filter.html
@@ -11,15 +11,15 @@
       </div>
     </div>
 
-    <div class="filter-sections accordion">
-      <div class="section accordion-item" data-expanded="true">
-        <div class="accordion-item-header section-header">
+    <div class="filter-accordion accordion">
+      <div class="accordion-item">
+        <div class="accordion-item-header">
           <div class="title">Categories</div>
           <button class="accordion-toggler">
             <%= require('../../images/icons/collapse.svg?inline') %>
           </button>
         </div>
-        <div class="section-content accordion-item-content">
+        <div class="accordion-item-content">
           <div>
             <input
               type="checkbox"
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="false">
+      <div class="section accordion-item">
         <div class="accordion-item-header section-header">
           <div class="title">Price</div>
           <button class="accordion-toggler">
@@ -143,7 +143,7 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="false">
+      <div class="section accordion-item">
         <div class="accordion-item-header section-header">
           <div class="title">Level</div>
           <button class="accordion-toggler">
@@ -198,7 +198,7 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="false">
+      <div class="section accordion-item">
         <div class="accordion-item-header section-header">
           <div class="title">Language</div>
           <button class="accordion-toggler">
@@ -223,7 +223,7 @@
         </div>
       </div>
 
-      <div class="section accordion-item" data-expanded="false">
+      <div class="section accordion-item">
         <div class="accordion-item-header section-header">
           <div class="title">Ratings</div>
           <button class="accordion-toggler">
