--- a/src/views/ContentDetail/layout.html
+++ b/src/views/ContentDetail/layout.html
@@ -20,18 +20,15 @@
           </div>
 
           <div class="content-wrap col">
-            <section class="objectives accordion">
-              <div class="section accordion-item" data-expanded="true">
-                <div class="section-header">
+            <section class="objectives-accordion accordion">
+              <div class="accordion-item">
+                <div class="accordion-item-header">
                   <h2 class="title">Course Objectives</h2>
                   <button class="accordion-toggler">
-                    <i
-                      ><%= require('../../images/icons/collapse.svg?inline')
-                      %></i
-                    >
+                    <%= require('../../images/icons/collapse.svg?inline') %>
                   </button>
                 </div>
-                <div class="section-content accordion-item-content">
+                <div class="accordion-item-content">
                   <p>
                     Quis consequat anim laborum elit ex aliquip exercitation
                     quis sint enim sit fugiat reprehenderit enim. Reprehenderit
@@ -47,18 +44,15 @@
               </div>
             </section>
 
-            <section class="description accordion">
-              <div class="section accordion-item" data-expanded="true">
-                <div class="section-header">
+            <section class="description-accordion accordion">
+              <div class="accordion-item">
+                <div class="accordion-item-header">
                   <h2 class="title">About This Course</h2>
                   <button class="accordion-toggler">
-                    <i
-                      ><%= require('../../images/icons/collapse.svg?inline')
-                      %></i
-                    >
+                    <%= require('../../images/icons/collapse.svg?inline') %>
                   </button>
                 </div>
-                <div class="section-content accordion-item-content">
+                <div class="accordion-item-content">
                   <p>
                     Velit in ridiculus sed netus. Et sit pharetra sit quam est
                     nisi nunc. Enim, scelerisque mattis sagittis pretium, elit.
@@ -66,13 +60,11 @@
                     phasellus viverra pulvinar. Tincidunt tortor cum libero,
                     donec.
                   </p>
-
                   <p>
                     Diam enim semper lacus, gravida. Pellentesque tellus
                     scelerisque ornare nisl. Scelerisque nulla risus, molestie
                     amet, vitae dolor sed.
                   </p>
-
                   <p>
                     Pellentesque nulla felis sagittis eget orci facilisis at
                     proin. Urna, turpis pellentesque non massa massa lectus elit
@@ -80,7 +72,6 @@
                     feugiat. Eu pharetra, et id diam gravida molestie. Augue
                     vestibulum, amet nunc laoreet elementum nulla in.
                   </p>
-
                   <p>
                     Pulvinar habitasse integer massa aliquam feugiat augue
                     sagittis senectus quisque. Odio mattis tincidunt maecenas
