--- a/src/scss/pages/contentDetails.scss
+++ b/src/scss/pages/contentDetails.scss
@@ -217,54 +217,6 @@
     border-radius: 4px;
     box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
 
-    .section {
-      &[data-expanded="false"] {
-        .section-header {
-          border-bottom: 0;
-          button {
-            transform: rotate(180deg);
-          }
-        }
-        .section-content {
-          padding-top: 0;
-          padding-bottom: 0;
-          height: 0;
-        }
-      }
-      &[data-expanded="true"] {
-        .section-content {
-          height: auto;
-        }
-      }
-    }
-
-    .section-header {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      padding: 16px 12px;
-      border-bottom: 1px solid rgba(46, 43, 69, 0.1);
-
-      h2 {
-        font-style: normal;
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 24px;
-        letter-spacing: 0.75px;
-        color: var(--brand-primary);
-        margin-bottom: 0;
-      }
-
-      button {
-        @include m.button-reset;
-        height: 24px;
-
-        i {
-          @include m.inline-svg-icon(24px, #000);
-        }
-      }
-    }
-
     .section-content {
       padding: 16px 12px;
       overflow: hidden;
@@ -284,10 +236,49 @@
       }
     }
 
-    &.objectives {
-    }
+    &.objectives-accordion,
+    &.description-accordion {
+      border: 0;
 
-    &.description {
+      .accordion-item {
+      }
+
+      .accordion-item-header {
+        border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+
+        > .title {
+          font-weight: 600;
+          font-size: 20px;
+          line-height: 24px;
+          letter-spacing: 0.75px;
+          color: var(--brand-primary);
+          padding-top: 4px;
+          padding-bottom: 4px;
+          margin-bottom: 0;
+        }
+
+        > .accordion-toggler svg path {
+          fill: var(--brand-primary);
+        }
+      }
+
+      .accordion-item-content {
+        > p {
+          font-style: normal;
+          font-weight: normal;
+          font-size: 17px;
+          line-height: 25px;
+          letter-spacing: -0.408px;
+          color: var(--brand-primary);
+
+          &:first-of-type {
+            margin-top: 12px;
+          }
+          &:last-of-type {
+            margin-bottom: 0;
+          }
+        }
+      }
     }
 
     &.curriculum {
@@ -320,33 +311,45 @@
             margin-left: 0;
           }
 
-          .lessons-sections-toggle {
+          .curriculum-accordion-toggle-all {
             color: var(--brand-orange);
+            opacity: 0.8;
+            transition: opacity 0.08s ease-in;
+
+            &:hover {
+              opacity: 1;
+              text-decoration: underline;
+            }
           }
         }
       }
 
-      .lessons {
-        .section-header {
-          background: #f1f2f3;
-          align-items: center;
-          height: 40px;
-          justify-content: flex-start;
-          border-top: 1px solid rgba(46, 43, 69, 0.1);
-          padding: 0 12px;
+      .curriculum-accordion {
+        border: 0;
+        border-top: 1px solid rgba(46, 43, 69, 0.1);
+        border-radius: 0 0 4px 4px;
 
-          .section-title {
-            font-style: normal;
+        .accordion-item {
+          padding-top: 10px;
+          padding-bottom: 10px;
+        }
+
+        .accordion-item-header {
+          margin-top: -10px;
+          margin-bottom: -10px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          background: #f1f2f3;
+          border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+
+          > .title {
             font-weight: 600;
-            font-size: 15px;
-            line-height: 20px;
-            letter-spacing: -0.24px;
             color: rgba(60, 60, 67, 0.6);
             margin-bottom: 0;
             margin-left: 16px;
           }
 
-          .section-counter {
+          > .lessons-counter {
             font-style: normal;
             font-weight: normal;
             font-size: 15px;
@@ -356,27 +359,27 @@
             margin-left: auto;
           }
 
-          .accordion-toggler {
-            order: -1;
+          > .accordion-toggler {
+            margin-left: 0;
+            width: 20px;
+            height: 20px;
 
-            i svg path {
+            svg path {
               fill: rgba(60, 60, 67, 0.6);
             }
           }
         }
 
-        .section-content {
-          padding: 0 12px;
-
+        .accordion-item-content {
           .lesson {
             display: flex;
             flex-direction: row;
             align-items: center;
             padding-top: 12px;
-            padding-bottom: 12px;
 
             &:not(:last-child) {
               border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+              padding-bottom: 12px;
             }
 
             &.is-playing {
