🚧 WIP: Lesson page template
- Add video player section

- Add curriculum sidebar in desktop screen

--- a/src/views/Lesson/layout.html
+++ b/src/views/Lesson/layout.html
@@ -1,1 +1,249 @@
-<main class="lesson"></main>
+<main class="lesson">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <div class="video ratio ratio-16x9">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/GLy2rYHwUqY"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+
+        <div class="description"></div>
+
+        <div class="notes"></div>
+
+        <div class="related"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="desktop-sb-curriculum">
+    <div class="curriculum-wrap">
+      <div class="curriculum-tabs">
+        <div class="tab tab-active">
+          <button>Course Curriculum</button>
+        </div>
+        <div class="tab">
+          <button>Supporting Documents</button>
+        </div>
+        <div class="tab">
+          <button>About Course</button>
+        </div>
+      </div>
+
+      <div class="curriculum-accordion accordion">
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            <h3 class="title">Introduction</h3>
+            <div class="lessons-counter">4 lessons</div>
+            <button class="accordion-toggler">
+              <%= require('../../images/icons/collapse.svg?inline') %>
+            </button>
+          </div>
+
+          <div class="accordion-item-content">
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#1</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  At Mauris Nisi: Elit Tincidunt Interdum
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="podcast">
+                    Podcast
+                  </div>
+                  <div class="lesson-duration">5:42</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#2</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  Ullamco cillum irure cillum nulla occaecat.
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="video">Video</div>
+                  <div class="lesson-duration">11:05</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#3</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title"
+                  >Sint velit ut dolore Lorem ea ex.</a
+                >
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="webinar">
+                    Webinar
+                  </div>
+                  <div class="lesson-duration">25:28</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson is-playing">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#4</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  Quis sit id nostrud esse reprehenderit labore deserunt magna.
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="video">Video</div>
+                  <div class="lesson-duration">29:51</div>
+                  <div class="lesson-playing">Now playing</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            <h3 class="title">Vel Egestas de Yoga</h3>
+            <div class="lessons-counter">2 lessons</div>
+            <button class="accordion-toggler">
+              <%= require('../../images/icons/collapse.svg?inline') %>
+            </button>
+          </div>
+
+          <div class="accordion-item-content">
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#5</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  Mollit proident nulla ex do dolor anim deserunt excepteur
+                  minim sit velit et.
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="video">Video</div>
+                  <div class="lesson-duration">31:22</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson is-locked">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/lock.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#6</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  Sunt enim irure elit reprehenderit officia qui quis ullamco
+                  aliqua exercitation aliquip.
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="video">Video</div>
+                  <div class="lesson-duration">17:43</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="accordion-item">
+          <div class="accordion-item-header">
+            <h3 class="title">Introduction</h3>
+            <div class="lessons-counter">4 lessons</div>
+            <button class="accordion-toggler">
+              <%= require('../../images/icons/collapse.svg?inline') %>
+            </button>
+          </div>
+
+          <div class="accordion-item-content">
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#1</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  At Mauris Nisi: Elit Tincidunt Interdum
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="podcast">
+                    Podcast
+                  </div>
+                  <div class="lesson-duration">5:42</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#2</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  Ullamco cillum irure cillum nulla occaecat.
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="video">Video</div>
+                  <div class="lesson-duration">11:05</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#3</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title"
+                  >Sint velit ut dolore Lorem ea ex.</a
+                >
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="webinar">
+                    Webinar
+                  </div>
+                  <div class="lesson-duration">25:28</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="lesson">
+              <div class="lesson-status">
+                <i><%= require('../../images/icons/play.svg?inline') %></i>
+              </div>
+              <div class="lesson-order">#4</div>
+              <div class="lesson-detail">
+                <a href="#" class="lesson-title">
+                  Quis sit id nostrud esse reprehenderit labore deserunt magna.
+                </a>
+                <div class="lesson-meta">
+                  <div class="product-tag" data-product-type="video">Video</div>
+                  <div class="lesson-duration">29:51</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
