--- a/src/scss/pages/lesson.scss
+++ b/src/scss/pages/lesson.scss
@@ -1,4 +1,5 @@
 @use '../mixins' as *;
+@use '../elements/author' as a;
 
 .lesson {
   display: flex;
@@ -24,10 +25,72 @@
     }
   }
 
-  .description {
+  .summary {
+    background-color: var(--brand-white);
+    margin-bottom: 24px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
+
+    .description-accordion {
+      .accordion-item-content {
+        padding-top: 12px !important;
+        min-height: 56px !important;
+      }
+    }
+
+    .author {
+      @include a.base("medium");
+      padding: 16px 12px;
+    }
   }
 
   .notes {
+    background-color: var(--brand-white);
+    margin-bottom: 24px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
+    padding: 16px 12px;
+
+    > h2 {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 0.75px;
+      color: var(--brand-primary);
+      margin-bottom: 12px;
+    }
+
+    .notes-input {
+      > input[type="text"] {
+        background-color: rgba(46, 43, 69, 0.06);
+        border-radius: 6px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 21px;
+        letter-spacing: -0.32px;
+        padding: 10px;
+        border: 1px solid rgba(46, 43, 69, 0);
+        width: 100%;
+        transition-property: border-color, background-color;
+        transition-duration: 0.08s;
+        transition-timing-function: ease-in;
+
+        &::placeholder {
+          color: rgba(60, 60, 67, 0.6);
+        }
+
+        &:focus {
+          background-color: var(--brand-white);
+          border-color: rgba(46, 43, 69, 0.24);
+          outline: none;
+        }
+      }
+    }
+
+    .notes-log {
+    }
   }
 
   .curriculum {
@@ -93,6 +156,9 @@
         padding-bottom: 10px;
         background: #f1f2f3;
         border-bottom: 1px solid rgba(46, 43, 69, 0.1);
+        // Custom sticky
+        position: sticky;
+        top: 72px;
 
         > .title {
           font-weight: 600;
