⚡️ Lesson page template improvement
- Fix several desktop layout and stylesheet issues

--- a/src/views/Lesson/layout.html
+++ b/src/views/Lesson/layout.html
@@ -18,6 +18,7 @@
             <div class="accordion-item">
               <div class="accordion-item-header">
                 <div class="title">Lesson #4</div>
+                <div class="v-separator"></div>
                 <div class="section-name">Introduction</div>
                 <button class="accordion-toggler">
                   <%= require('../../images/icons/collapse.svg?inline') %>
