--- a/src/scss/pages/lesson.scss
+++ b/src/scss/pages/lesson.scss
@@ -32,9 +32,62 @@
     box-shadow: 0px 2px 4px rgba(14, 31, 53, 0.12);
 
     .description-accordion {
-      .accordion-item-content {
-        padding-top: 12px !important;
-        min-height: 56px !important;
+      border: 0;
+      border-radius: 0;
+
+      .accordion-item {
+        > h1 {
+          font-style: normal;
+          font-weight: bold;
+          font-size: 22px;
+          line-height: 28px;
+          color: var(--brand-primary);
+          padding-top: 10px;
+        }
+
+        .accordion-item-header {
+          justify-content: flex-start;
+
+          .title,
+          .section-name {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 15px;
+            line-height: 20px;
+            letter-spacing: -0.24px;
+            color: rgba(46, 43, 69, 0.6);
+            justify-self: flex-start;
+            margin-right: 12px;
+          }
+
+          .v-separator {
+            height: 20px;
+            border-left: 1px solid rgba(46, 43, 69, 0.1);
+            margin-right: 12px;
+          }
+
+          .accordion-toggler {
+            margin-left: auto;
+
+            svg path {
+              fill: rgba(46, 43, 69, 0.6);
+            }
+          }
+        }
+
+        .accordion-item-content {
+          padding-top: 0 !important;
+          min-height: 54px !important;
+
+          > p {
+            font-style: normal;
+            font-weight: normal;
+            font-size: 17px;
+            line-height: 27px;
+            letter-spacing: -0.408px;
+            color: var(--brand-primary);
+          }
+        }
       }
     }
 
@@ -97,6 +150,15 @@
   }
 
   .related {
+    > h2 {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 24px;
+      letter-spacing: 0.75px;
+      color: var(--brand-primary);
+      margin-bottom: 12px;
+    }
   }
 
   .desktop-sb-curriculum {
@@ -159,6 +221,7 @@
         // Custom sticky
         position: sticky;
         top: 72px;
+        z-index: 2;
 
         > .title {
           font-weight: 600;
@@ -230,6 +293,7 @@
             color: #2e2b45;
             text-align: right;
             width: 37px;
+            flex-shrink: 0;
           }
 
           &-title {
