⚡️ Add green label variant for free product

--- a/src/scss/pages/contentDetails.scss
+++ b/src/scss/pages/contentDetails.scss
@@ -124,6 +124,12 @@
       &-price {
         margin-bottom: 12px;
 
+        &[data-is-free="true"] {
+          > span {
+            color: var(--brand-green);
+          }
+        }
+
         > span {
           display: inline-block;
           color: #e95244;
